# TinyC

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh  vcpkg.json
TinyEditor/: CMakeLists.txt
TinyEngine/: CMakeLists.txt
TinyEngine/src/: Test.c  Test.h  define.h
TinyEngine/src/Core/: Asserter.c  Asserter.h  Logger.c  Logger.h
TinyEngine/src/Platform/: platform.h  platform_win32.c
TinyTester/: CMakeLists.txt
TinyTester/src/: Main.c
